# uup-setup

./: .gitignore  LICENSE  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: release.yml
